openshift/configs/ingress/route/ingressgateway-ott.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ingress-${NAMESPACE}-ott
    istio: ingress-${NAMESPACE}-ott
    chart: gateways
    heritage: Tiller
    release: istio
  name: ingressgateway-ott
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
spec:
  host: ${INGRESS_HOST_OTT}
  port:
    targetPort: https-${INGRESS_HOST_OTT_PORT}
  tls:
    termination: passthrough
  to:
    kind: Service
    name: svc-ingressgateway
