openshift/configs/ingress/route/ingressgateway-tls.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ingress-${NAMESPACE}-tls
    istio: ingress-${NAMESPACE}-tls
    chart: gateways
    heritage: Tiller
    release: istio
  name: ingressgateway-tls
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
spec:
  host: ${INGRESS_HOST_TLS}
  port:
    targetPort: https-${INGRESS_HOST_TLS_PORT}
  tls:
    termination: passthrough
  to:
    kind: Service
    name: svc-ingressgateway
